# nnlpy

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  example.json  example.nnl  pyproject.toml
.github/workflows/: python.yml
docs/: example.md  spec.md
nnl/: __init__.py  cli.py  core.py
tests/: test_nnl_basic.py
