[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nnlpy"
version = "0.4.0"
description = "NNL parser/serializer - Near Natural Language (JSON-capable)"
authors = [{ name="Shivam Kumar" }]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = []

[tool.setuptools]
packages = ["nnl"]

[project.scripts]
nnl = "nnl.cli:main"
